# llvm_lang

./: .clang-tidy  .editorconfig  .gitignore  .gitmodules  CMakeLists.txt  README.md  justfile
.github/workflows/: ci.yml
.nvim/: history.jsonl  project_marker  targets.json  targets.state.json  tree-state
include/: fwd.h  lexer.cpp  lexer.h
src/: lexer.cpp  main.cpp
test/: CMakeLists.txt  test_test.cpp
test/lexer/: test_comment.cpp  test_double.cpp  test_extern.cpp  test_identifier.cpp  test_keywoards.cpp  test_keywords.cpp  test_unknown.cpp
